Fixed: Resume link on mobile and Section height blur and overlap

--- a/src/global.css
+++ b/src/global.css
@@ -21,10 +21,8 @@ body {
   @apply bg-white/5 text-secondary;
 }
 .section {
-  @apply rounded-md backdrop-blur-md;
-  height: clamp(80vh, 100vh, 1280px);
+  @apply rounded-md  min-h-[calc(100vh_-_153px)];
 }
-
 a {
   @apply hover:text-secondary;
 }
